# ircp-tray

./: AUTHORS  CONTRIBUTORS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  ircp-tray.desktop.in
po/: ChangeLog  LINGUAS  POTFILES.in  cs.po  de.po  es.po  fi.po  fr.po  gl.po  he.po  it.po  nl.po  pl.po  ru.po  sv.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  debug.h  dirtraverse.c  dirtraverse.h  ircp.h  ircp_client.c  ircp_client.h  ircp_io.c  ircp_io.h  ircp_server.c  ircp_server.h  ircptray.c  ircptray_main.c  ircptray_main.h  ircptray_trayicon.c  ircptray_trayicon.h  irda_misc.c  irda_misc.h  progresswin.c  progresswin.h  recvfile.c  recvfile.h  resources.h  savefiledlg.c  savefiledlg.h  sendfile.c  sendfile.h
